--- a/css/styles2.css
+++ b/css/styles2.css
@@ -263,11 +263,13 @@ div.treemapNpsControls {
   background: #fff;
 	opacity: .9;
 	/* color: #eeeeee; */
-  color: black;
+  	color: black;
 	padding: 10px;
-	width: 300px;
-	font-size: 12px;
 	z-index: 10;
+	pointer-events: none;
+	font-family: sans-serif;
+	font-size:10px;
+	white-space: nowrap;
 }
 .tooltip .title {
 	font-size: 13px;
@@ -275,7 +277,7 @@ div.treemapNpsControls {
 .tooltip .name {
   font-weight:bold;
 }
-
+/*
 #chord_tooltip {
   color: white;
   opacity: .9;
@@ -291,6 +293,7 @@ div.treemapNpsControls {
   font-family: sans-serif;
   font-size:10px;
 }
+*/
 #circle circle {
   fill: none;
   pointer-events: all;
