--- a/css/styles2.css
+++ b/css/styles2.css
@@ -277,23 +277,6 @@ div.treemapNpsControls {
 .tooltip .name {
   font-weight:bold;
 }
-/*
-#chord_tooltip {
-  color: white;
-  opacity: .9;
-  background: #333;
-  padding: 7px;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
-  position: absolute;
-  z-index: 10;
-  visibility: hidden;
-  white-space: nowrap;
-  pointer-events: none;
-  font-family: sans-serif;
-  font-size:10px;
-}
-*/
 #circle circle {
   fill: none;
   pointer-events: all;
@@ -306,8 +289,10 @@ path.chord {
   stroke: #000;
   stroke-width: .25px;
 }
-#circle:hover path.fade {
+/*#circle:hover */
+path.fade {
   display: none;
+  /*opacity:0.03;*/
 }
 
 .btn{display:inline-block;padding:4px 10px 4px;text-decoration:none;font-size:8px;line-height:18px;color:#333333;text-align:center;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);background-color:#fafafa;background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));background-image:-webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:-moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);background-image:-ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:-o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-repeat:no-repeat;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);border:1px solid #ccc;border-bottom-color:#bbb;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);cursor:pointer;*margin-left:.3em;}.btn:first-child{*margin-left:0;}
