--- a/css/styles2.css
+++ b/css/styles2.css
@@ -143,20 +143,20 @@ p#detractorDesc, #promoterDesc, #categoryAsc, #neutralDesc {
 	font-size: 11px;
 }
 g.promoterBars{
-	fill: green;
-	opacity: .75;
+	fill: rgb(94,140,106);
+	/*opacity: .75;*/
 	stroke: black;
 	stroke-width: .5;
 }
 g.neutralBars {
 	fill: rgb(221,217,195);
-	opacity: .75;
+	/*opacity: .75;*/
 	stroke: black;
 	stroke-width: .5;
 }
 g.detractorBars {
-	fill: red;
-	opacity: .75;
+	fill: rgb(130,35,24);
+	/*opacity: .75;*/
 	stroke: black;
 	stroke-width: .5;
 }
@@ -291,8 +291,11 @@ path.chord {
 }
 /*#circle:hover */
 path.fade {
-  display: none;
+  	display: none;
   /*opacity:0.03;*/
+}
+.bubbles {
+	/*opacity: .75;*/
 }
 
 .btn{display:inline-block;padding:4px 10px 4px;text-decoration:none;font-size:8px;line-height:18px;color:#333333;text-align:center;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);background-color:#fafafa;background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));background-image:-webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:-moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);background-image:-ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:-o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-image:linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);background-repeat:no-repeat;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);border:1px solid #ccc;border-bottom-color:#bbb;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);cursor:pointer;*margin-left:.3em;}.btn:first-child{*margin-left:0;}
